<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/create_new_game"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/board_spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:entries="@array/board_array"
        android:gravity="center"
        android:padding="10dp" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="playButtonOnClick"
        android:text="@string/play_game" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save_load_game"
        android:textSize="18sp" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="loadButtonOnClick"
        android:text="@string/load_saved_game" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:onClick="saveButtonOnClick"
        android:text="@string/save_game" />
</LinearLayout>