<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_buttons"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/gamecentre_logo" />

    <LinearLayout
        android:id="@+id/sign_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/sign_in_to_play"
            android:textSize="18sp" />

        <Button
            android:id="@+id/go_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:height="50dp"
            android:onClick="signUpButtonOnClick"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/go_to_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:height="50dp"
            android:onClick="signInButtonOnClick"
            android:text="@string/sign_in" />

    </LinearLayout>

    <Button
        android:id="@+id/go_to_scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:width="180dp"
        android:height="50dp"
        android:onClick="scoreboardButtonOnClick"
        android:text="@string/view_scoreboard" />

</RelativeLayout>